# OpenCV

./: CMakeLists.txt  DilateAndErode.cpp  FindContour.cpp  FloodFill.cpp  HoughTransform.cpp  Instruction.cpp  ReadinVedio.cpp  Round.cpp  cvBar.cpp
matlab/: plotCurve.m
